# robot-dog

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  ROADMAP.md  RVIZ_RUST.md  build-and-test.sh  build-docker.sh  build_for_bananapi.sh  deploy_to_bananapi.sh  docker-compose.deploy.yml  docker-compose.yml  requirements.txt  test-docker.sh
.github/workflows/: ci-cpp.yml  ci.yml
docs/: HARDWARE.md
documentation/: PRD.md
robot_dog_ws/: Dockerfile  PACKAGE_STRUCTURE.md  README.md  start_rust_nodes.sh  stop_rust_nodes.sh  teleop.sh
robot_dog_ws/docs/: CALIBRATION.md  INSTALL.md
robot_dog_ws/src/: README.md
robot_dog_ws/src/dog_bringup/config/: robot_config.yaml
robot_dog_ws/src/dog_bringup/launch/: gait_controller.launch.py  robot.launch.py  visualize.launch.py
robot_dog_ws/src/dog_control/: package.xml
robot_dog_ws/src/dog_control/dog_control/: balance_controller.py  servo_interface.py  test_gait.py
robot_dog_ws/src/dog_control/launch/: balance_controller.launch.py
robot_dog_ws/src/dog_control_cpp/: CMakeLists.txt  README.md  package.xml
robot_dog_ws/src/dog_control_cpp/config/: balance_params.yaml  balance_params_aggressive.yaml  gait_params.yaml  imu_simulator.yaml
robot_dog_ws/src/dog_control_cpp/include/dog_control_cpp/: balance_controller.hpp  gait_controller.hpp  imu_simulator.hpp
robot_dog_ws/src/dog_control_cpp/launch/: control_launch.py  control_simulation.launch.py
robot_dog_ws/src/dog_control_cpp/src/: balance_controller.cpp  gait_controller.cpp  imu_simulator.cpp  inverse_kinematics.cpp  main_gait_controller.cpp  pid_controller.cpp  trajectory_planner.cpp
robot_dog_ws/src/dog_control_cpp/test/: test_balance_controller.cpp  test_gait_controller.cpp  test_inverse_kinematics.cpp
robot_dog_ws/src/dog_control_rust/src/: main.rs
robot_dog_ws/src/dog_description/: package.xml
robot_dog_ws/src/dog_description/config/: ros2_control.yaml
robot_dog_ws/src/dog_description/launch/: display.launch.py
robot_dog_ws/src/dog_description/urdf/: robot_parameters.xacro
robot_dog_ws/src/dog_hardware/config/: servo_config.yaml
robot_dog_ws/src/dog_hardware/launch/: servo_driver.launch.py
robot_dog_ws/src/dog_hardware_cpp/: CMakeLists.txt  package.xml
robot_dog_ws/src/dog_hardware_cpp/config/: servo_params.yaml
robot_dog_ws/src/dog_hardware_cpp/include/dog_hardware_cpp/: dynamixel_driver.hpp  pca9685_driver.hpp  servo_controller.hpp  servo_driver_node.hpp  servo_interface.hpp  simulation_driver.hpp
robot_dog_ws/src/dog_hardware_cpp/launch/: hardware_launch.py  servo_driver.launch.py
robot_dog_ws/src/dog_hardware_cpp/src/: pca9685_driver.cpp  servo_controller.cpp  servo_driver_node.cpp  simulation_driver.cpp
robot_dog_ws/src/dog_hardware_cpp/test/: test_pca9685_driver.cpp  test_servo_controller.cpp
robot_dog_ws/src/dog_hardware_rust/: Cargo.toml  package.xml
robot_dog_ws/src/dog_sensors/: package.xml
robot_dog_ws/src/dog_sensors/config/: imu_params.yaml
robot_dog_ws/src/dog_sensors/launch/: imu.launch.py  imu_balance.launch.py
robot_dog_ws/src/dog_sensors_cpp/: CMakeLists.txt  README.md  package.xml
robot_dog_ws/src/dog_sensors_cpp/config/: imu_params.yaml
robot_dog_ws/src/dog_sensors_cpp/include/dog_sensors_cpp/: imu_node.hpp  mpu6050_driver.hpp  mpu6050_simulator.hpp
robot_dog_ws/src/dog_sensors_cpp/launch/: imu_launch.py  imu_simulation.launch.py
robot_dog_ws/src/dog_sensors_cpp/src/: imu_filter.cpp  imu_node.cpp  imu_node_main.cpp  mpu6050_driver.cpp  mpu6050_simulator.cpp
robot_dog_ws/src/dog_sensors_cpp/test/: test_imu_simulation.sh  test_mahony_filter.cpp  test_mpu6050_simulator.cpp
robot_dog_ws/src/dog_sensors_rust/: Cargo.toml  package.xml
robot_dog_ws/src/dog_sensors_rust/src/: main.rs
robot_dog_ws/src/dog_teleop/: package.xml  setup.py
robot_dog_ws/src/dog_teleop/dog_teleop/: teleop_joystick.py  udp_server.py
robot_dog_ws/src/dog_teleop/scripts/: udp_client.py
robot_dog_ws/src/dog_teleop_cpp/: CMakeLists.txt  README.md  package.xml
robot_dog_ws/src/dog_teleop_cpp/config/: teleop_config.yaml
robot_dog_ws/src/dog_teleop_cpp/include/dog_teleop_cpp/: gamepad_teleop.hpp  keyboard_teleop.hpp  udp_teleop.hpp
robot_dog_ws/src/dog_teleop_cpp/launch/: teleop_all.launch.py  teleop_joystick.launch.py  teleop_keyboard.launch.py  teleop_launch.py  teleop_udp.launch.py
robot_dog_ws/src/dog_teleop_cpp/src/: gamepad_teleop.cpp  keyboard_teleop.cpp  udp_teleop.cpp
robot_dog_ws/src/dog_teleop_cpp/test/: test_keyboard_handler.cpp  test_teleop_commands.cpp
robot_dog_ws/src/dog_teleop_rust/: Cargo.toml
src/dog_balance_rust/: CMakeLists.txt  Cargo.toml  package.xml
src/dog_balance_rust/src/: main.rs
src/dog_bringup/: CMakeLists.txt  package.xml
src/dog_bringup/launch/: rust_robot.launch.py  simulation.launch.py
src/dog_bringup/scripts/: rust_bridge.py
src/dog_control/: setup.py
src/dog_control/config/: balance_params.yaml
src/dog_control/docs/: GAIT_CONTROLLER.md
src/dog_control/dog_control/: __init__.py  gait_controller.py
src/dog_control_rust/: CMakeLists.txt  Cargo.toml  package.xml
src/dog_control_rust/src/: main.rs
src/dog_description/: CMakeLists.txt
src/dog_description/launch/: display.launch.py
src/dog_description/urdf/: dog.urdf.xacro  leg.xacro  materials.xacro
src/dog_hardware/: package.xml  setup.py
src/dog_hardware/dog_hardware/: __init__.py  servo_driver_node.py
src/dog_hardware/resource/: dog_hardware
src/dog_hardware_rust/: CMakeLists.txt
src/dog_hardware_rust/src/: main.rs
src/dog_sensors/: README.md  setup.py
src/dog_sensors/dog_sensors/: __init__.py  imu_node.py
src/dog_sensors_rust/: CMakeLists.txt
src/dog_teleop/: README.md
src/dog_teleop/dog_teleop/: __init__.py  teleop_keyboard.py
src/dog_teleop/launch/: teleop_all.launch.py  teleop_joystick.launch.py  teleop_keyboard.launch.py  udp_server.launch.py
src/dog_teleop_rust/: CMakeLists.txt  package.xml
src/dog_teleop_rust/src/: main.rs
